Thu Jun 20 16:06:37 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/pentomino.rb: added.
	  Simply load pentomino puzzle in the benchmark/ directory.

Thu Jun 20 15:32:56 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/redblack.rb: import red black tree benchmark from
	  https://github.com/jruby/rubybench/blob/master/time/bench_red_black.rb

	* benchmark/gc/ring.rb: add a benchmark. This benchmark create many
	  old objects.

Thu Jun 20 15:14:00 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc: create a directory to store GC related benchmark.

	* benchmark/gc/gcbench.rb: moved from tool/gcbench.rb.

	* benchmark/gc/hash(1|2).rb: ditto.

	* benchmark/gc/rdoc.rb: ditto.

	* benchmark/gc/null.rb: added.

	* common.mk: fix rule.

Thu Jun 20 14:09:54 2013  Koichi Sasada  <ko1@atdot.net>

	* tool/hashbench1.rb: fix paramter too. Increase temporary objects.

Thu Jun 20 14:01:35 2013  Koichi Sasada  <ko1@atdot.net>

	* tool/hashbench1.rb: fix parameters.

Thu Jun 20 14:00:34 2013  Koichi Sasada  <ko1@atdot.net>

	* common.mk: remove dependency from ruby.

Thu Jun 20 13:14:06 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_check_backtrace): evaluate RARRAY_AREF only once.
	  the first argument of RB_TYPE_P is expanded twice for non-immediate
	  types.

Thu Jun 20 08:09:29 2013  Koichi Sasada  <ko1@atdot.net>

	* tool/gcbench.rb: Summary in one line.

	* common.mk: separate gcbench-hash to gcbench-hash1 and gcbench-hash2.

Thu Jun 20 08:07:23 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BIGSIZE): New macro.
	  (bigfixize): Use BIGSIZE.
	  (big2ulong): Ditto.
	  (check_shiftdown): Ditto.
	  (rb_big_aref): Ditto.

Thu Jun 20 07:46:48 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (rb_gc_writebarrier): give up rescan A and register B directly
	  if A has huge number of children.

Thu Jun 20 07:30:35 2013  Koichi Sasada  <ko1@atdot.net>

	* common.mk: add new rules `gcbench-rdoc', `gcbench-hash'.
